# CViT

./: .gitignore  README.md  cvit_prediction.py  cvit_train.py  docker-compose.yml  prediction.py  pyproject.toml  requirements.txt  store_embeddings.py  store_vedios_in_db.py  visualiseData.py
helpers/: loader.py
model/: cvit.py  full_frame_emmbedings.py  pred_func.py
result/: prediction_other_cvit.json  prediction_other_cvit2.json
