[tool.poetry]
name = "cvit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "2.0.0+cu117", source = "torch_stable" }
torchvision = { version = "0.15.0+cu117", source = "torch_stable" }
facenet-pytorch = "2.5.2"

[[tool.poetry.source]]
name = "torch_stable"
url = "https://download.pytorch.org/whl/torch_stable.html"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
