[tool.poetry]
name = "cvit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
albucore = "^0.0.21"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
certifi = "^2024.8.30"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
colorama = "^0.4.6"
contourpy = "^1.3.1"
cycler = "^0.12.1"
decord = "^0.6.0"
dlib = "^19.24.6"
einops = "^0.8.0"
eval-type-backport = "^0.2.0"
exceptiongroup = "^1.2.2"
face-recognition = "^1.3.0"
face-recognition-models = "^0.3.0"
facenet-pytorch = "^2.6.0"
filelock = "^3.16.1"
fonttools = "^4.55.0"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
httpcore = "^1.0.7"
httpx = "^0.28.0"
hyperframe = "^6.0.1"
idna = "^3.10"
imageio = "^2.36.1"
jinja2 = "^3.1.4"
joblib = "^1.4.2"
kiwisolver = "^1.4.7"
lazy-loader = "^0.4"
markupsafe = "^3.0.2"
matplotlib = "^3.9.3"
mpmath = "^1.3.0"
networkx = "^3.4.2"
opencv-python = "^4.10.0.84"
opencv-python-headless = "^4.10.0.84"
packaging = "^24.2"
portalocker = "^3.0.0"
protobuf = "^5.29.0"
pydantic = "^2.10.2"
pydantic-core = "^2.27.1"
pyparsing = "^3.2.0"
python-dateutil = "^2.9.0.post0"
pywin32 = "^308"
pyyaml = "^6.0.2"
qudida = "^0.0.4"
requests = "^2.32.3"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
simsimd = "^6.2.1"
six = "^1.16.0"
sniffio = "^1.3.1"
stringzilla = "^3.11.0"
sympy = "^1.13.3"
threadpoolctl = "^3.5.0"
tifffile = "^2024.9.20"
tqdm = "^4.67.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
